--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.7",
-    "@angular/common": "^19.1.7",
-    "@angular/compiler": "^19.1.7",
-    "@angular/core": "^19.1.7",
-    "@angular/forms": "^19.1.7",
-    "@angular/platform-browser": "^19.1.7",
-    "@angular/platform-browser-dynamic": "^19.1.7",
-    "@angular/platform-server": "^19.1.7",
-    "@angular/router": "^19.1.7",
-    "@angular/ssr": "^19.1.8",
+    "@angular/animations": "^19.2.0-rc.0",
+    "@angular/common": "^19.2.0-rc.0",
+    "@angular/compiler": "^19.2.0-rc.0",
+    "@angular/core": "^19.2.0-rc.0",
+    "@angular/forms": "^19.2.0-rc.0",
+    "@angular/platform-browser": "^19.2.0-rc.0",
+    "@angular/platform-browser-dynamic": "^19.2.0-rc.0",
+    "@angular/platform-server": "^19.2.0-rc.0",
+    "@angular/router": "^19.2.0-rc.0",
+    "@angular/ssr": "^19.2.0-rc.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
@@ -29,9 +29,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.8",
-    "@angular/cli": "^19.1.8",
-    "@angular/compiler-cli": "^19.1.7",
+    "@angular-devkit/build-angular": "^19.2.0-rc.0",
+    "@angular/cli": "^19.2.0-rc.0",
+    "@angular/compiler-cli": "^19.2.0-rc.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
